--- a/public/css/custome.css
+++ b/public/css/custome.css
@@ -37,6 +37,13 @@
 
 /* Standar style */
 
+
+.flex-center{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+}
 ul {
     list-style: none;
     padding: 0;
