update all recipes compo and update style

--- a/public/css/custome.css
+++ b/public/css/custome.css
@@ -8,7 +8,7 @@
     /* color: #8F625B !important; */
 }
 .third-color{
-    color:#CDE990  !important;
+    color:#258EA6 !important;
 }
 .bg-white-p{
     background: #F6F6F4 !important;
@@ -21,7 +21,7 @@
     /* background: #8F625B !important; */
 }
 .bg-third-color{
-    background:#CDE990  !important;
+    background:#258EA6 !important;
 }
 .bg-gray{
     background: #e5e7eb !important;
